Prevent heading overflow.

--- a/gsearch-web/src/main/resources/META-INF/resources/css/grow.scss
+++ b/gsearch-web/src/main/resources/META-INF/resources/css/grow.scss
@@ -1,5 +1,9 @@
 .gsearch-portlet {
 
+	a {
+		color: initial !important;
+	}
+	
 	.scopemenu {
 		display: none !important;
 	}
